--- a/index.html
+++ b/index.html
@@ -1,72 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Pinterest Verification -->
-    <meta name="p:domain_verify" content="c46ad41f97a4664cae22dea9bf3464b8"/>
-    <title>HealthyLivingPursuit - Embark on Your Journey to Radiant Health and Wellness</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <meta name="p:domain_verify" content="c46ad41f97a4664cae22dea9bf3464b8" />
+    <!-- Bootstrap -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
+      crossorigin="anonymous"
+    ></script>
+    <title>
+      Live, Love, Laugh with Emily - Embark on Your Journey to Radiant Health
+      and Wellness
+    </title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <!-- Header Section -->
     <header>
-        <h1>HealthyLivingPursuit</h1>
-        <p>Embark on Your Journey to Radiant Health and Wellness</p>
+      <h1>Live, Love, Laugh with Emily</h1>
+      <p>Embark on Your Journey to Radiant Health and Wellness</p>
     </header>
 
     <!-- Navigation Section -->
     <nav>
-        <ul>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#blog">Blog</a></li>
-            <li><a href="#products">Product Recommendations</a></li>
-            <li><a href="#recipes">Healthy Recipes</a></li>
-            <li><a href="#fitness">Fitness & Exercise</a></li>
-            <li><a href="#mindfulness">Mindfulness & Mental Health</a></li>
-            <li><a href="#resources">Resources</a></li>
-            <li><a href="#contact">Contact Us</a></li>
-        </ul>
+      <ul>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#products">Product Recommendations</a></li>
+        <li><a href="#recipes">Healthy Recipes</a></li>
+        <li><a href="#fitness">Fitness & Exercise</a></li>
+        <li><a href="#mindfulness">Mindfulness & Mental Health</a></li>
+        <li><a href="#resources">Resources</a></li>
+        <li><a href="#contact">Contact Us</a></li>
+      </ul>
     </nav>
 
     <!-- Main Content Section -->
     <main>
-        <section id="about">
-            <!-- About Us Content Goes Here -->
-        </section>
+      <section id="about">
+        <!-- About Us Content Goes Here -->
+      </section>
 
-        <section id="blog">
-            <!-- Blog Posts Content Goes Here -->
-        </section>
+      <section id="blog">
+        <!-- Blog Posts Content Goes Here -->
+      </section>
 
-        <section id="products">
-            <!-- Product Recommendations Content Goes Here -->
-        </section>
+      <section id="products">
+        <!-- Product Recommendations Content Goes Here -->
+      </section>
 
-        <section id="recipes">
-            <!-- Healthy Recipes Content Goes Here -->
-        </section>
+      <section id="recipes">
+        <!-- Healthy Recipes Content Goes Here -->
+      </section>
 
-        <section id="fitness">
-            <!-- Fitness & Exercise Content Goes Here -->
-        </section>
+      <section id="fitness">
+        <!-- Fitness & Exercise Content Goes Here -->
+      </section>
 
-        <section id="mindfulness">
-            <!-- Mindfulness & Mental Health Content Goes Here -->
-        </section>
+      <section id="mindfulness">
+        <!-- Mindfulness & Mental Health Content Goes Here -->
+      </section>
 
-        <section id="resources">
-            <!-- Resources Content Goes Here -->
-        </section>
+      <section id="resources">
+        <!-- Resources Content Goes Here -->
+      </section>
 
-        <section id="contact">
-            <!-- Contact Us Form and Social Media Links Go Here -->
-        </section>
+      <section id="contact">
+        <!-- Contact Us Form and Social Media Links Go Here -->
+      </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2023 HealthyLivingPursuit. All rights reserved.</p>
+      <p>&copy; 2023 HealthyLivingPursuit. All rights reserved.</p>
     </footer>
-</body>
+  </body>
 </html>
